--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,48 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="inline-flex flex-col space-y-96 items-center justify-center" style="width: 1880px; height: 70px;">
+        <div class="transform rotate-180 w-2.5 h-1.5 bg-pink-900 bg-opacity-50 border rounded-full border-gray-900" />
+        <div class="inline-flex space-x-6 items-center justify-end pl-5 pr-6 pt-4 pb-3 bg-white bg-opacity-90 rounded-md"
+            style="width: 1880px; height: 70px;">
+            <div class="flex items-center justify-center w-36 h-10">
+                <div class="flex space-x-3.5 items-center justify-end flex-1 h-full">
+                    <img class="w-12 h-full rounded-lg"
+                        src="https://via.placeholder.com/48.52467727661133x40.99123764038086" />
+                    <div class="flex items-end justify-start w-20 h-6">
+                        <div class="w-1.5 h-3 bg-gray-700 rounded-full" />
+                        <div class="w-1 h-2.5 bg-gray-700 rounded-full" />
+                        <div class="w-0.5 h-2.5 bg-gray-700 rounded-full" />
+                        <div class="w-2 h-2 bg-gray-700 rounded-full" />
+                        <div class="w-1 h-2 bg-gray-700 rounded-full" />
+                        <div class="w-0.5 h-2.5 bg-gray-700 rounded-full" />
+                        <div class="w-0.5 h-3 bg-gray-700 rounded-full" />
+                        <div class="w-0.5 h-2 bg-gray-700 rounded-full" />
+                        <div class="w-2 h-2 bg-gray-700 rounded-full" />
+                        <div class="w-0.5 h-2.5 bg-gray-700 rounded-full" />
+                        <div class="w-1 h-2.5 bg-gray-700 rounded-full" />
+                        <div class="w-0.5 h-2.5 bg-gray-700 rounded-full" />
+                        <div class="w-1 h-2 bg-gray-700 rounded-full" />
+                        <div class="w-0.5 h-3 bg-gray-700 rounded-full" />
+                        <div class="w-0.5 h-2.5 bg-gray-700 rounded-full" />
+                        <div class="w-1.5 h-2 bg-gray-700 rounded-full" />
+                        <div class="w-1 h-2 bg-gray-700 rounded-full" />
+                        <div class="w-1.5 h-1/3 bg-gray-700 rounded-full" />
+                        <div class="w-0.5 h-2 bg-gray-700 rounded-full" />
+                        <div class="w-1 h-2 bg-gray-700 rounded-full" />
+                        <img class="w-1/6 h-2.5 rounded-full"
+                            src="https://via.placeholder.com/12.697072982788086x10.077013969421387" />
+                    </div>
+                </div>
+            </div>
+            <p class="text-lg font-semibold tracking-widest leading-7 text-center text-gray-900 uppercase">About Us
+                Equipment Dealers FAQs Blogs Contact Us </p>
+            <div class="w-2.5 h-1.5 bg-pink-900 bg-opacity-50 border rounded-full border-gray-900" />
+            <p class="text-lg font-semibold tracking-widest leading-7 text-center text-gray-900 uppercase">Shop products</p>
+            <div class="w-1 h-1.5 border rounded-full border-gray-900" />
+            <p class="text-lg font-semibold tracking-widest leading-7 text-center text-gray-900 uppercase">My Account</p>
+        </div>
+    </div>
     <div class="p-8 border-black border border-solid">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda eaque id maxime optio quidem quo? Alias doloribus facilis fugiat quaerat? Aliquam delectus dolore in libero, modi molestias qui tempore?
     </div>
